[package]
name = "backup"
version = "0.0.1"
edition = "2018"
publish = false

[[test]]
name = "integrations"
path = "tests/integrations/mod.rs"

[dependencies]
tikv = { path = "../../", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
protobuf = "~2.0"
raft = "0.6.0-alpha"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
# better to not use slog-global, but pass in the logger
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
engine = { path = "../engine" }
clap = "2.32"
fs2 = "0.4"
tikv_util = { path = "../tikv_util" }
serde_json = "1.0"
futures = "0.1"
tempdir = "0.3"
tokio-threadpool = "0.1"
grpcio = { version = "0.5.0-alpha.3", features = [ "openssl-vendored" ] }

[dev-dependencies]
test_util = { path = "../test_util" }
test_raftstore = { path = "../test_raftstore" }
