[package]
name = "cmd"
version = "4.0.0-alpha"
authors = ["The TiKV Authors"]
description = "A distributed transactional key-value database powered by Rust and Raft"
license = "Apache-2.0"
keywords = ["KV", "distributed-systems", "raft"]
homepage = "https://tikv.org"
repository = "https://github.com/tikv/tikv/"
readme = "README.md"
edition = "2018"
publish = false

[features]
default = ["tikv_alloc/default"]
tcmalloc = ["tikv_alloc/tcmalloc"]
jemalloc = ["tikv_alloc/jemalloc", "engine/jemalloc"]
mimalloc = ["tikv_alloc/mimalloc"]
portable = ["engine/portable"]
sse = ["engine/sse"]
mem-profiling = ["tikv_alloc/mem-profiling"]
profiling = ["profiler/profiling"]
failpoints = ["fail/failpoints"]

[lib]
name = "cmd"

[[bin]]
name = "tikv-server"

[[bin]]
name = "tikv-ctl"

[dependencies]
tikv = { path = "../../", default-features = false }
log = { version = "0.3", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
slog-term = "2.4"
slog_derive = "0.1"
byteorder = "1.2"
rand = "0.6.5"
rand_xorshift = "0.1.1"
quick-error = "1.2.2"
tempfile = "3.0"
time = "0.1"
toml = "0.4"
libc = "0.2"
crc = "1.8"
fs2 = "0.4"
spin = "0.5"
protobuf = "2"
nix = "0.11"
utime = "0.2"
chrono = "0.4"
chrono-tz = "0.5.1"
lazy_static = "1.3"
backtrace = "0.2.3"
clap = "2.32"
url = "1.7.2"
regex = "1.0"
sys-info = "0.5.7"
indexmap = { version = "1.0", features = ["serde-1"] }
futures = "0.1"
futures-cpupool = "0.1"
futures-locks = "0.1"
tikv_alloc = { path = "../tikv_alloc", default-features = false }
tokio-core = "0.1"
tokio-timer = "0.2"
tokio-executor = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
zipf = "5.0.1"
bitflags = "1.0.1"
fail = "0.3"
uuid = { version = "0.6", features = [ "serde", "v4" ] }
grpcio = { version = "0.5.0-alpha.3", features = [ "openssl-vendored" ] }
raft = "0.6.0-alpha"
crossbeam = "0.5"
derive_more = "0.11.0"
num = { version = "0.2", default-features = false }
num-traits = "0.2"
hex = "0.3"
rust-crypto = "^0.2"
base64 = "0.10"
safemem = { version = "0.3", default-features = false }
smallvec = { version = "0.6", features = ["union"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
more-asserts = "0.1"
hyper = { version = "0.12", default-features = false, features = ["runtime"] }
tokio-threadpool = "0.1.13"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
vlog = "0.1.4"
twoway = "0.2.0"
ordered-float = "1.0"
nom = "5.0.0-beta1"
servo_arc = "0.1.1"
bitfield = "0.13.2"
profiler = { path = "../profiler" }
mime = "0.3.13"
tipb = { git = "https://github.com/pingcap/tipb.git" }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
log_wrappers = { path = "../log_wrappers" }
engine = { path = "../engine" }
tikv_util = { path = "../tikv_util" }
farmhash = "1.1.5"
fxhash = "0.2.1"
backup = { path = "../backup", default-features = false }

[dependencies.murmur3]
git = "https://github.com/pingcap/murmur3.git"

[dependencies.prometheus]
version = "0.4.2"
default-features = false
features = ["nightly", "push", "process"]

[dependencies.prometheus-static-metric]
version = "0.1.4"
default-features = false

[target.'cfg(unix)'.dependencies]
signal = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { git = "https://github.com/tikv/procinfo-rs" }
